# WORKSTATION

./: .currsorules  .gitignore  README.md  alembic.ini  convert_csv_to_env.py  docker-compose.dev.yml  docker-compose.yml  example_automation.py  main.py  migrate.toml  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  run.sh  run_crews.py  run_crews.sh  setup.py  test_apis.sh
DEV-MAN/diagrams/: architecture.md  credential_relationships.md  dependency_flow.md  new_diagram.md  package_decisions.md  package_dependencies.md  package_scenarios.md  project_structure.md  service_endpoints.md  viewer.html
DEV-MAN/docs/: cursorules.md  dual_package_setup.md  environment_management.md  package_concepts.md  package_installation.md  package_migration.md  project_architecture.md  python_packaging.md  script_workflow.md  scripts.md  troubleshooting.md
WORKSTATION/: pyproject.toml
WORKSTATION/timeline/: pyproject.toml
api_tester/: api_analyzer.py  api_metadata_analyzer.py  api_validator.py  generate_api_dashboard_data.py  generate_visualization.py  generate_visualization_data.py  monitor_apis.py  openai_test.py  quick_test.py  quick_test_report.py  requirements.txt  run_analysis.py  run_analysis.sh  run_tests.sh  run_visualization.sh  setup.py  setup_and_run.sh  test_naming.py  test_results.md  visualize_apis.py
backend/: alembic.ini  requirements.txt
config/: settings.py
crews/: __init__.py  base_crew.py  crewai_analyzer.py  crewai_documenter.py  docker_analyzer.py  docker_hub_analyzer.py  run_all_crews.py  test_crew.py  visualize_docker.py
email_analyzer/: analyst.py  credentials_manager.py  database.py  fetcher.py  models.py  test_email_fetch.py
marks-history/: .gitignore  Makefile  README.md  app.py  cli.py  plan.md  requirements.txt  setup.py  setup.sh
scripts/: create_dev_man.bat  create_dev_man.sh  diagram_watcher.py  generate_diagrams.py  install.py  manage_packages.py  setup_project.py  start_services.py  test_dev_docs.py  test_server_import.py  verify_packages.py  verify_packages_structure.py  verify_server.py
timeline/: HOW_TO_RUN.md  __init__.py  analyzer_crew.py  cli.py  cursor_handler.py  init_db.py  logs.py  models.py  terminal.py  watcher.py
(+52 files in other folders)
